--- a/CardMemorize/src/main/res/layout/setting_layout.xml
+++ b/CardMemorize/src/main/res/layout/setting_layout.xml
@@ -1,16 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="30dp"
-    android:orientation="vertical"
-    android:id="@+id/layout"
-    android:background="#ffffffff">
+    android:id="@+id/layout" android:layout_width="match_parent"
+    android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:orientation="vertical">
 
-    <Spinner
-        android:background="#ff000000"
-        android:id="@+id/setting_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawSelectorOnTop="true" />
+    <Spinner android:id="@+id/setting_spinner" android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:layout_gravity="right"
+        android:background="#3F5110" android:drawSelectorOnTop="true" />
 
 </LinearLayout>
